# image-drift-generator

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPROVEMENTS.md  LICENSE  Makefile  QUICKREF.md  README.md  SECURITY.md  config.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
.github/: README_TEMPLATE.md  RELEASE_CHECKLIST.md
.github/workflows/: ci.yml  python-app.yml
configs/: preset_mobile.sh  preset_preview.sh  preset_story.sh
docs/: CONFIGURATION.md  USAGE.md
examples/: README.md
input/: README.txt
scripts/: install_dev.sh
src/: __init__.py  encode_webm.py  errors.py  generate_frames.py  logging_config.py  test_placeholder.py
tests/: test_generation.py  test_offsets.py
